src/test/ui/rfc1598-generic-associated-types/collections.stderr
warning: the feature `generic_associated_types` is incomplete and may cause the compiler to crash
  --> $DIR/collections.rs:1:12
   |
LL | #![feature(generic_associated_types)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0109]: type arguments are not allowed for this type
  --> $DIR/collections.rs:56:90
   |
LL | fn floatify<C>(ints: &C) -> <<C as Collection<i32>>::Family as CollectionFamily>::Member<f32>
   |                                                                                          ^^^ type argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/collections.rs:68:69
   |
LL | fn floatify_sibling<C>(ints: &C) -> <C as Collection<i32>>::Sibling<f32>
   |                                                                     ^^^ type argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/collections.rs:17:71
   |
LL |         <<Self as Collection<T>>::Family as CollectionFamily>::Member<U>;
   |                                                                       ^ type argument not allowed

error[E0109]: lifetime arguments are not allowed for this type
  --> $DIR/collections.rs:24:50
   |
LL |     fn iterate<'iter>(&'iter self) -> Self::Iter<'iter>;
   |                                                  ^^^^^ lifetime argument not allowed

error[E0109]: lifetime arguments are not allowed for this type
  --> $DIR/collections.rs:50:50
   |
LL |     fn iterate<'iter>(&'iter self) -> Self::Iter<'iter> {
   |                                                  ^^^^^ lifetime argument not allowed

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0109`.
